--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 2.1.0+1
 
 environment:
   sdk: ^3.10.0
@@ -40,6 +40,8 @@ dependencies:
   path: ^1.9.0
 
   shared_preferences: ^2.2.2
+
+  package_info_plus: ^5.0.1
 
 dev_dependencies:
   flutter_test:
