--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,11 @@ dependencies:
 
   shared_preferences: ^2.2.2
 
-  package_info_plus: ^5.0.1
+  package_info_plus: ^8.0.0
 
   google_mobile_ads: ^5.1.0
+  firebase_core: ^3.0.0
+  firebase_analytics: ^11.0.0
 
 dev_dependencies:
   flutter_test:
